--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.17",
     "gatsby": "^3.13.0",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
+    "gatsby-plugin-google-gtag": "^3.13.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-mdx": "^2.13.0",
